--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="home_sidebar">
+<div class="home_sidebar" style="min-height: 80vh; margin-bottom: 0">
   <div class="home_box">
     <!--================Menu Area =================-->
     <header class="shop_header_area carousel_menu_area">
