--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,10 +1,7 @@
-@import "../../assets/scss/variables";
-@import "../../assets/scss/predefin";
-@import "../../assets/css/ltr.css";
-@import "../../assets/css/responsive.css";
-@import "../../assets/scss/blog";
-@import "../../assets/scss/shop";
 
+.main_slider_area #home_box_slider ul li .slider_text_box .secand_text {
+  color: #222;
+}
 .subs_btn_1 {
   background: #d91522;
   text-transform: uppercase;
