--- a/src/app/contact/contact/contact.component.html
+++ b/src/app/contact/contact/contact.component.html
@@ -71,7 +71,7 @@
                 </div>
                 <div class="form-group col-lg-4">
                     <input type="text" class="form-control" id="website" name="website" placeholder="Phone" formControlName="phone" />
-                  <mat-error *ngIf="contactUsForm.controls.phone.hasError('required') && contactUsForm.controls.full_name.touched">
+                  <mat-error *ngIf="contactUsForm.controls.phone.hasError('required') && contactUsForm.controls.phone.touched">
                     Phone is required
                   </mat-error>
                 </div>
