--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,45 +1,54 @@
-<section id="login" class="wow fadeIn pt-4">
-    <div class="container">
-        <div class="card py-lg-5 p-3 text-center">
-            <div class="row w-100 mx-0">
-                <div class="col-lg-4 my-3 mx-auto">
-                    <h2 class="font-weight-bold">Login</h2>
-                    <p>Please Login</p>
-                    <form [formGroup]="loginForm" class="mt-5" (ngSubmit)="onLogin(loginForm.value)">
-                        <!-- Email admin@admin.com-->
-                        <mat-form-field appearance="fill" class="w-100 wow fadeIn">
-                            <input matInput placeholder="Email address" type="email" required formControlName="email" />
-                            <!-- Email Validation -->
-                            <mat-hint class="text-danger" *ngIf="loginForm.controls['email'].touched">
+<section class="login_area p_100">
+  <div class="container">
+    <div class="login_inner loginpageout">
+      <div class="row">
+        <div class="col-lg-12">
+          <div class="login_title">
+            <h2 class="mb-0">log in your account</h2>
+            <p>Log in to your account to discovery all great features.</p>
+          </div>
+          <form [formGroup]="loginForm" (ngSubmit)="onLogin(loginForm.value)"  class="login_form row">
+            <div class="col-lg-12 form-group">
+              <input matInput placeholder="Email address" class="w-100" type="email" required formControlName="email" />
+              <!-- Email Validation -->
+              <mat-hint class="text-danger" *ngIf="loginForm.controls['email'].touched">
                                 <span *ngIf="loginForm.controls['email'].errors?.required">
                   This field is required!
                 </span>
-                                <span *ngIf="loginForm.controls['email'].errors?.pattern">
+                <span *ngIf="loginForm.controls['email'].errors?.pattern">
                   Invalid Email
                 </span>
-                            </mat-hint>
-                        </mat-form-field>
-                        <!-- Password 123456-->
-                        <mat-form-field appearance="fill" class="w-100 mt-3 wow fadeIn">
-                            <input matInput placeholder="Password" type="password" required formControlName="password" />
-                            <!-- Password Validation -->
-                            <mat-hint class="text-danger" *ngIf="loginForm.controls['password'].touched">
+              </mat-hint>
+            </div>
+            <div class="col-lg-12 form-group">
+              <input matInput placeholder="Password" class="w-100" type="password" required formControlName="password" />
+              <!-- Password Validation -->
+              <mat-hint class="text-danger" *ngIf="loginForm.controls['password'].touched">
                                 <span *ngIf="loginForm.controls['password'].errors?.required">
                   This field is required!
                 </span>
-                                <span *ngIf="loginForm.controls['password'].errors?.minlength">
+                <span *ngIf="loginForm.controls['password'].errors?.minlength">
                   Please enter at least 6 characters
                 </span>
-                            </mat-hint>
-                        </mat-form-field>
-                        <button class="btn btn-primary w-100 mt-4 wow fadeIn" [disabled]="loginForm.invalid">
-              Login
-            </button>
-                    </form>
-                </div>
+              </mat-hint>
             </div>
-        </div>
-    </div>
-</section>
+            <div class="col-lg-6 mb-0 form-group">
+              <h5 style="font-weight: 500;
+    line-height: 1.2; font-size: 1.25rem;"><a href="auth/register" style="font-size: 14px; letter-spacing: 0.5px;"> New account</a></h5>
+            </div>
+            <div class="col-lg-6 mb-0 form-group">
+              <h4><a href="forget-password.php"> Forgot your password ?</a></h4>
+            </div>
 
+            <div class="col-lg-12 mb-0 mt-0 form-group mt-0">
+              <button type="submit" value="submit" class="btn update_btn form-control" style="background-color: #d91522;
+    color: #fff;" [disabled]="loginForm.invalid">Login</button>
+            </div>
+          </form>
+        </div>
+
+      </div>
+    </div>
+  </div>
+</section>
 
