--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -321,7 +321,7 @@
               <div class="input-group">
                 <input type="email" class="form-control" placeholder="yourmail@domain.com" aria-label="Search for..." />
                 <span class="input-group-btn mx-auto" style="max-width: 166px">
-                  <button class="btn btn-secondary subs_btn_1" type="button">
+                  <button class="registerbtn" style=" border: 1px solid #d91522;" type="button">
                     Subscribe
                   </button>
                 </span>
