--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -62,7 +62,7 @@
                   </mat-option>
                 </mat-select>
               </mat-form-field>
-              <h5><a routerLink="/auth/login"> Have an accout?</a></h5>
+              <h5><a href="/auth/login"> Have an accout?</a></h5>
 
             </div>
             <div class="col-lg-6 form-group">
