--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,3 +1,11 @@
+<section class="solid_banner_area contactusbg mx-auto">
+  <div class="container">
+      <div class="solid_banner_inner">
+          <h3>Login</h3>
+      </div>
+  </div>
+</section>
+
 <section class="login_area p_100" style="overflow: hidden;">
   <div class="container">
     <div class="login_inner loginpageout">
