--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -248,8 +248,8 @@
               <p class="enterpassword mb-4">
                 You should enter password to unlock this event
               </p>
-              <div class="row" *ngFor="let event of privateEvents">
-                <div class="col-lg-4 col-sm-6">
+              <div class="row">
+                <div class="col-lg-4 col-sm-6" *ngFor="let event of privateEvents">
                   <div class="from_blog_item">
                     <a href="event-details.php">
                       <img class="img-fluid" [src]="event.image" alt="" />
